--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -1,36 +1,33 @@
-# This is a basic workflow to help you get started with Actions
+name: Deploy to Render
 
-name: CI
-
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    branches:
+      - main   # deploy when pushing to main branch
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  deploy:
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: Login to Render
+        run: echo "${{ secrets.RENDER_API_KEY }}" | docker login registry.render.com --username _ --password-stdin
+
+      - name: Build and Push Docker Image
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          docker build -t registry.render.com/${{ secrets.RENDER_SERVICE_ID }}/flask-docker-app:latest .
+          docker push registry.render.com/${{ secrets.RENDER_SERVICE_ID }}/flask-docker-app:latest
+
+      - name: Trigger Deploy on Render
+        run: |
+          curl -X POST \
+          -H "Authorization: Bearer ${{ secrets.RENDER_API_KEY }}" \
+          -H "Content-Type: application/json" \
+          -d '{"clearCache": false}' \
+          https://api.render.com/v1/services/${{ secrets.RENDER_SERVICE_ID }}/deploys
