--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -18,5 +18,5 @@ jobs:
           curl -X POST \
           -H "Authorization: Bearer ${{ secrets.RENDER_API_KEY }}" \
           -H "Content-Type: application/json" \
-          -d "{\"clearCache\":false}" \
+          --data-raw '{"clearCache":false}' \
           https://api.render.com/v1/services/${{ secrets.RENDER_SERVICE_ID }}/deploys
