--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -56,7 +56,7 @@ jobs:
           http_code=$(curl -sS -o /tmp/render_resp.json -w "%{http_code}" -X POST \
             -H "Authorization: Bearer $RENDER_API_KEY" \
             -H "Content-Type: application/json" \
-            --data-raw '{"clearCache":false}' \
+            --data-raw '{}' \
             https://api.render.com/v1/services/$RENDER_SERVICE_ID/deploys)
 
           echo "Render API HTTP status: $http_code"
